[tool.poetry]
name = "trevorproxy"
version = "1.0.6"
description = "Rotate your source IP address via SSH proxies and other methods"
authors = ["qxf77", "TheTechromancer"]
license = "GPL-3.0"
repository = "https://github.com/qxf77/reverseTREVORproxy"
homepage = "https://github.com/qxf77/reverseTREVORproxy"
original = "https://github.com/blacklanternsecurity/TREVORproxy"

[tool.poetry.dependencies]
python = "^3.6"
sh = "^1.14.2"

[tool.poetry.scripts]
trevorproxy = 'trevorproxy.cli:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
